adding test button

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<head>
+	<script src="scripts/app.js"></script>
+</head>
 <html>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<button id="mybutton">Button</button>
 </body>
 </html>
