--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
-<button id="mybutton">Button</button>
+<button type="mybutton">Click Me!</button>
 </body>
 </html>
