--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>Hello Braden, welcome to my world.</p>
 <button type="button" id="mybutton" onclick="myFunction()">Click Me!</button>
 </body>
 </html>
