--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 </head>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>Hello Braden, welcome to my world.</p>
-<p>This is your new, adult, nerdy playground.</p>
-<button type="button" id="mybutton" onclick="myFunction()">Click Me!</button>
+	<h1>Hello World</h1>
+	<p>Hello Braden, welcome to my world.</p>
+	<p>This is your new, nerdy playground.</p>
+	<button type="button" id="mybutton" onclick="myFunction()">Click Me!</button>
 </body>
 </html>
