--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<p>Hello Braden, welcome to my world.</p>
 	<p>This is your new, nerdy playground.</p>
 	<p>Testing this thing.</p>
-	<button type="button" id="mybutton" onclick="alert("Hey Braden!");">Click Me!</button>
+	<button type="button" id="mybutton" onclick="alert("Hey Braden!")">Click Me!</button>
 </body>
 </html>
