--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<p>Hello Braden, welcome to my world.</p>
 	<p>This is your new, nerdy playground.</p>
 	<p>Testing this thing.</p>
+	<p>Test number 2</p>
 	<button type="button" id="mybutton" onclick="myFunction()">Click Me!</button>
 </body>
 </html>
