test from tutorial

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 	<p>This is your new, nerdy playground.</p>
 	<p>Testing this thing.</p>
 	<p>Test number 2</p>
+	<h2> Hi Spicy P! Here's an attempt!</h2>
+	<a href="company/about.html">About Me</a>
+    <a href="images/wheatharvest.JPG" download>My Photo</a>
+    <a href="#section-css">CSS</a>
+    <a href="https://google.com" target="_blank">Google</a>
+    <a href="mailto:carpenter.braden10@gmail.com">email me!</a>
 	<button type="button" id="mybutton" onclick="myFunction()">Click Me!</button>
 </body>
 </html>
