--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 	<h1>Hello World</h1>
 	<p>Hello Braden, welcome to my world.</p>
 	<p>This is your new, nerdy playground.</p>
-	<p>Testing this thing.</p>
-	<p>Test number 2</p>
+	<a href="company/about.html">About Me</a>
+    	<a href="images/wheatharvest.JPG">My Photo</a>
+   	<a href="#section-css">CSS</a>
+    	<a href="https://google.com" target="_blank">Google</a>
+    	<a href="mailto:carpenter.braden10@gmail.com">email me!</a>
 	<button type="button" id="mybutton" onclick="myFunction()">Click Me!</button>
 </body>
 </html>
